--- a/CPP_Module_03/ex00/Makefile
+++ b/CPP_Module_03/ex00/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: grib <grib@student.42.fr>                  +#+  +:+       +#+         #
+#    By: sylabbe <sylabbe@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/10/23 16:05:12 by sylabbe           #+#    #+#              #
-#    Updated: 2024/10/25 21:09:14 by grib             ###   ########.fr        #
+#    Updated: 2024/11/26 10:22:37 by sylabbe          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -58,4 +58,4 @@ re:
 
 MAKEFLAGS         += --no-print-directory
 
-.PHONY: all clean fclean re bonus
+.PHONY: all clean fclean re 
