--- a/CPP_Module_05/ex00/Makefile
+++ b/CPP_Module_05/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: sylabbe <sylabbe@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/12/02 17:07:22 by sylabbe           #+#    #+#              #
-#    Updated: 2024/12/05 15:31:42 by sylabbe          ###   ########.fr        #
+#    Updated: 2024/12/12 10:14:45 by sylabbe          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -58,4 +58,4 @@ re:
 
 MAKEFLAGS         += --no-print-directory
 
-.PHONY: all clean fclean re bonus
+.PHONY: all clean fclean re
