--- a/CPP_Module_08/ex00/Makefile
+++ b/CPP_Module_08/ex00/Makefile
@@ -6,14 +6,14 @@
 #    By: sylabbe <sylabbe@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/01/21 16:00:20 by sylabbe           #+#    #+#              #
-#    Updated: 2025/01/30 15:34:20 by sylabbe          ###   ########.fr        #
+#    Updated: 2025/09/17 14:23:50 by sylabbe          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 
 NAME = Easyfind
 
-CFLAGS = -Werror -Wall -Wextra #-std=c++98 #-fno-elide-constructors #-fsanitize=address
+CXXFLAGS = -Werror -Wall -Wextra #-std=c++98 #-fno-elide-constructors #-fsanitize=address
 
 SRC_MDT_DIR = .
 
@@ -25,7 +25,7 @@ SRC =	$(addprefix $(SRC_MDT_DIR)/, main.cpp)
 
 OBJECTS = $(SRC:$(SRC_MDT_DIR)/%.cpp=$(DEST_MDT_DIR)/%.o)
 
-CC = c++
+CXX = c++
 
 RM = rm -f
 
@@ -33,12 +33,12 @@ all: $(NAME)
 
 
 $(NAME): $(OBJECTS)
-	@${CC} ${CFLAGS} $(OBJECTS) -o $(NAME) 
+	@${CXX} ${CXXFLAGS} $(OBJECTS) -o $(NAME) 
 	@echo "\033[0;32mMANDATORY COMPILED\033[0m"
 
 
 $(DEST_MDT_DIR)/%.o: $(SRC_MDT_DIR)/%.cpp #| obj
-	@$(CC) $(CFLAGS) -c $< -o $@ -g
+	@$(CXX) $(CXXFLAGS) -c $< -o $@ -g
 
 
 #obj:
