--- a/CPP_Module_08/ex01/Makefile
+++ b/CPP_Module_08/ex01/Makefile
@@ -6,20 +6,21 @@
 #    By: sylabbe <sylabbe@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/01/30 15:34:52 by sylabbe           #+#    #+#              #
-#    Updated: 2025/09/17 16:59:42 by sylabbe          ###   ########.fr        #
+#    Updated: 2025/09/18 14:42:04 by sylabbe          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = Span
 
-CXXFLAGS = -Werror -Wall -Wextra #-std=c++98 #-fno-elide-constructors #-fsanitize=address
+CXXFLAGS = -Werror -Wall -Wextra -std=c++98 #-fno-elide-constructors #-fsanitize=address
 
 SRC_MDT_DIR = .
 
 DEST_MDT_DIR = .
 
 # ls -1 *.c | sed -z 's/\n/ \\\n\t\t\t/g'
-SRC =	$(addprefix $(SRC_MDT_DIR)/, main.cpp)
+SRC =	$(addprefix $(SRC_MDT_DIR)/, main.cpp \
+										Span.cpp)
 
 
 OBJECTS = $(SRC:$(SRC_MDT_DIR)/%.cpp=$(DEST_MDT_DIR)/%.o)
