--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,6 +61,8 @@
         "cinttypes": "cpp",
         "variant": "cpp",
         "stack": "cpp",
-        "set": "cpp"
+        "set": "cpp",
+        "queue": "cpp",
+        "ranges": "cpp"
     }
 }
