--- a/CPP_Module_08/ex00/Makefile
+++ b/CPP_Module_08/ex00/Makefile
@@ -6,12 +6,12 @@
 #    By: sylabbe <sylabbe@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/01/21 16:00:20 by sylabbe           #+#    #+#              #
-#    Updated: 2025/09/18 14:42:04 by sylabbe          ###   ########.fr        #
+#    Updated: 2025/10/27 09:43:51 by sylabbe          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 
-NAME = Span
+NAME = easyfind
 
 CXXFLAGS = -Werror -Wall -Wextra -std=c++98 #-fno-elide-constructors #-fsanitize=address
 
